--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=ms-services-tareashorario
+
+spring.datasource.url=jdbc:postgresql://host:port
+spring.datasource.username=postgres
+spring.datasource.password=passoword
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
