--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=ms-services-tareashorario
 
-spring.datasource.url=jdbc:postgresql://host:port
+spring.datasource.url=jdbc:postgresql://localhost:5433/soft4
 spring.datasource.username=postgres
-spring.datasource.password=passoword
+spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8081
