--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+application propperties:
 spring.application.name=ms-services-tareashorario
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/soft4
+spring.datasource.url=jdbc:postgresql://localhost:5432/sf4
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
